Update frontend for VITE_API_URL integration

--- a/.env
+++ b/.env
@@ -5,6 +5,8 @@ VITE_FIREBASE_STORAGE_BUCKET=otan01.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=186306009260
 VITE_FIREBASE_APP_ID="1:186306009260:web:fcadef425175d8630a2709
 
+VITE_API_URL=https://otan-server.vercel.app
+
 
 #   apiKey: "AIzaSyBLCGPOjszZJ2IdDa0wVeWARNHka53RS8s",
 #   authDomain: "otan01.firebaseapp.com",
